fix: change overflow value

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,14 +5,11 @@
     --font-color-ter: #98A2B3;
     --card-background-color: rgba(196, 25, 25, 0.03);
     --footer-background-color: #F9FAFB;
-    
-
 }
 
 .page{
     min-height: 100vh;
     font-family: 'Inter', sans-serif;
-    overflow: hidden;
 }
 
 .cabecalho, .menu__list{
@@ -83,7 +80,7 @@
 
 .metricas{
     margin: 0 112px 96px;
-    display: grid;
+    display: grid;              /* Poderia ter utilizado flex, mas quis grid por questões de aprendizado */
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
     column-gap: 32px;
@@ -107,5 +104,4 @@
     line-height: 24px;
     margin-top: 8px;
     color: var(--font-color-sec);
-    text-align: left;
 }
